fix: forbid pan right on mobile; weekday-bar width is not right;

--- a/day2025-date-picker/less/styles.less
+++ b/day2025-date-picker/less/styles.less
@@ -188,6 +188,10 @@ main {
   }
 }
 
+:root {
+  touch-action: pan-y pinch-zoom double-tap-zoom;
+}
+
 .input-date {
   border: solid 2px var(--color-text-secondary);
   padding: 6px;
